<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/rr"
        tools:ignore="InvalidId">

        <androidx.cardview.widget.CardView
            android:id="@+id/basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            app:cardBackgroundColor="#47C27C"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/text_basic"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/intermediate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/basic"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="38dp"
            app:cardBackgroundColor="#47C27C"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/text_intermediate"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/intermediate"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="38dp"
            app:cardBackgroundColor="#47C27C"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/margin_medium"
                android:text="@string/text_advanced"
                android:textColor="@android:color/white"
                android:textSize="@dimen/margin_medium" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/advanced"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="38dp"
            app:cardBackgroundColor="#47C27C"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/margin_medium"
                android:text="@string/text_quiz"
                android:textColor="@android:color/white"
                android:textSize="@dimen/margin_medium" />

        </androidx.cardview.widget.CardView>



</RelativeLayout>
</RelativeLayout>
