<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">




        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins"
            android:rowCount="3"
            android:columnCount="2">

            //2
            <androidx.cardview.widget.CardView


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:id="@+id/adj">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:src="@drawable/adv"/>
                    <TextView
                        android:id="@+id/ae"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Adj"
                        android:textSize="10sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="12dp"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:id="@+id/count">
                //1
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="94dp"
                        android:src="@drawable/adv" />
                    <TextView
                        android:id="@+id/cu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/countable"
                        android:textSize="10sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="12dp"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            //3
            <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:id="@+id/unreal">
                <LinearLayout


                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:src="@drawable/adv"/>
                    <TextView
                        android:id="@+id/up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Unreal"
                        android:textSize="10sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="19dp"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            //4
            <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:id="@+id/ing"
                android:layout_margin="12dp">
                <LinearLayout


                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:src="@drawable/adv"/>
                    <TextView
                        android:id="@+id/ifn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ing"
                        android:textSize="10sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="12dp"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            //5

            <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:id="@+id/phrasal"
                android:layout_margin="12dp">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:src="@drawable/adv"/>
                    <TextView
                        android:id="@+id/pv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phrasal"
                        android:textSize="8sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="12dp"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            //6
            <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                android:id="@+id/model"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:src="@drawable/adv"/>
                    <TextView
                        android:id="@+id/mv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/model"
                        android:textSize="10sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="12dp"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>







        </GridLayout>

    </LinearLayout>



</ScrollView>